// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectionState Gets correct color 1`] = `
<div
  className="sc-AxirZ hLbodF"
>
  <div
    className="sc-AxiKw jLPcUa"
  />
  <span
    className="sc-AxjAm sc-AxhCb cNpZBW"
  >
    Blanko
  </span>
</div>
`;

exports[`connectionState Gets correct color 2`] = `
<div
  className="sc-AxirZ hLbodF"
>
  <div
    className="sc-AxiKw jLPcUa"
  />
  <span
    className="sc-AxjAm sc-AxhCb cNpZBW"
  >
    Disconnected
  </span>
</div>
`;

exports[`connectionState Gets correct color 3`] = `
<div
  className="sc-AxirZ hLbodF"
>
  <div
    className="sc-AxiKw jLPcUa"
  />
  <span
    className="sc-AxjAm sc-AxhCb cNpZBW"
  >
    Connecting
  </span>
</div>
`;

exports[`connectionState Gets correct color 4`] = `
<div
  className="sc-AxirZ hLbodF"
>
  <div
    className="sc-AxiKw jLPcUa"
  />
  <span
    className="sc-AxjAm sc-AxhCb cNpZBW"
  >
    Connected
  </span>
</div>
`;

exports[`connectionState renders correctly 1`] = `
<div
  className="sc-AxirZ hLbodF"
>
  <div
    className="sc-AxiKw jLPcUa"
  />
  <span
    className="sc-AxjAm sc-AxhCb cNpZBW"
  >
    Connected
  </span>
</div>
`;
